platform-tools/istio/istio-ingress/base/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: main-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingress
  servers:
    - port:
        number: 8080
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: true
      hosts:
        - "*.yedressov.com"
        - "yedressov.com"
    - port:
        number: 8443
        name: https
        protocol: HTTP
      hosts:
        - "*.yedressov.com"
        - "yedressov.com"
